# libquickjs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: quickjs-config.cmake.in
compat/: msvc_compat.h
compat/sys/: time.h
